# httpx_mcp

./: LICENSE  README.md  pyproject.toml
httpx_mcp/: __init__.py  server.py
