[project]
name = "httpx-mcp"
version = "1.0.0"
description = "A MCP tool for HTTP request testing using httpx"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
authors = [
    {name = "ZHEFOX", email = "zhefox@outlook.com"},
]

[project.scripts]
httpx-mcp = "httpx_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["httpx_mcp"]
